--- a/index.html
+++ b/index.html
@@ -82,6 +82,32 @@
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background: black; opacity: 0; pointer-events: none; transition: 1s; z-index: 100;
         }
+        /* 1. Подключаем шрифт напрямую (самая стабильная версия) */
+@font-face {
+    font-family: 'CustomEmoji';
+    src: url('https://fonts.gstatic.com/s/notocoloremoji/v25/Yq6P-KqWgBt7V-86KeV0uOjbBb1DeOEc.ttf') format('truetype');
+    /* Указываем браузеру, что этот шрифт — главный для всех символов */
+    unicode-range: U+000-50000; 
+}
+
+/* 2. Принудительно применяем его ко всему */
+* {
+    font-family: 'CustomEmoji', 'Segoe UI', Tahoma, sans-serif !important;
+    /* ГЛАВНАЯ СТРОЧКА: заставляет Android рисовать графику шрифтом, а не системой */
+    font-variant-emoji: emoji !important;
+    -webkit-font-smoothing: antialiased;
+}
+
+/* 3. Возвращаем цифрам и тексту белый цвет, чтобы не были серыми */
+body, p, div, span, button {
+    color: #ffffff;
+}
+
+/* 4. Золотые акценты для сыра и репутации */
+#cheese-count, #rep-count, #balance, .stat-bar span {
+    color: #ffcc00 !important;
+    font-weight: bold;
+                  }
     </style>
 </head>
 <body>
